--- a/PineappleSupermarket/Views/Home/Index.cshtml
+++ b/PineappleSupermarket/Views/Home/Index.cshtml
@@ -10,9 +10,10 @@
         @ViewBag.Saludo<br />
         DevIT<br />
         Integrantes:<br />
-        URL de Github:<br />
+        URL de Github:  https://github.com/StefiVioli/PineappleSupermarket <br />
     </h2>
-    @Html.ActionLink("Products", "Index", "Product")
+    @*@Html.ActionLink("Products", "Index", "Product")
+    @Html.ActionLink("Users", "Index", "User")*@
     @*@Html.Action("_PhotoGallery", "Product", new { number = 1 })*@
 
 </div>
