--- a/PineappleSupermarket/Views/Shared/_Layout.cshtml
+++ b/PineappleSupermarket/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
         <ul>
             <li><a href="#"></a>@Html.ActionLink("Home", "Index", "Home")</li>
             <li><a href="#"></a>@Html.ActionLink("Products", "Index", "Product")</li>
+            <li><a href="#"></a>    @Html.ActionLink("Users", "Index", "User")</li>
         </ul>
     </nav>
 
