--- a/PineappleSupermarket/Views/User/Edit.cshtml
+++ b/PineappleSupermarket/Views/User/Edit.cshtml
@@ -42,11 +42,11 @@
             @Html.ValidationMessageFor(model => model.Role)
         </div>
         
-        <div>
+        @*<div>
             @Html.LabelFor(model => model.CreatedDate)
             @Html.EditorFor(model => model.CreatedDate)
             @Html.ValidationMessageFor(model => model.CreatedDate)
-        </div>
+        </div>*@
 
         <p>
             <input type="submit" value="Save" />
