--- a/PineappleSupermarket/Views/Home/Index.cshtml
+++ b/PineappleSupermarket/Views/Home/Index.cshtml
@@ -10,10 +10,17 @@
         @ViewBag.Saludo<br />
         DevIT<br />
         Integrantes:<br />
-        URL de Github:  https://github.com/StefiVioli/PineappleSupermarket <br />
     </h2>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <h2>
+            <a href="https://github.com/StefiVioli/PineappleSupermarket">URL de Github</a>  <br />
+        </h2>
     @*@Html.ActionLink("Products", "Index", "Product")
     @Html.ActionLink("Users", "Index", "User")*@
-    @*@Html.Action("_PhotoGallery", "Product", new { number = 1 })*@
+    @*@Html.Action("_PhotoGallery", "Product", new { number = 3 })*@
 
 </div>
