--- a/PineappleSupermarket/Views/Product/Index.cshtml
+++ b/PineappleSupermarket/Views/Product/Index.cshtml
@@ -16,6 +16,8 @@
 <body class="display">
     <p>@Html.ActionLink("Nuevo", "Create", "Product")</p>
     @*<p>@Html.Action("_PhotoGallery", "Product")</p>*@
+
+     @*<img width="800" src="@Url.Action("GetImage", "Product")" />*@
     <table>
         <tr>
 
@@ -24,6 +26,7 @@
             <th>@Html.DisplayNameFor(model => model.Description)</th>
             <th>@Html.DisplayNameFor(model => model.Quantity)</th>
             <th>@Html.DisplayNameFor(model => model.UnitPrice)</th>
+            <th>@Html.DisplayNameFor(model => model.Picture)</th>
             <th></th>
         </tr>
         @foreach (var item in Model)
@@ -34,6 +37,7 @@
                 <td>@Html.DisplayFor(modelItem => item.Description)</td>
                 <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
                 <td>@Html.DisplayFor(modelItem => item.UnitPrice)</td>
+                <td><img width="50" src="@Url.Action("GetImage", "Product", new { id = item.ProductId })" /></td>
                 <td>
                     @Html.ActionLink("Detalle", "Detail", new { id = item.ProductId })
                 </td>
