--- a/PineappleSupermarket/Views/User/Index.cshtml
+++ b/PineappleSupermarket/Views/User/Index.cshtml
@@ -12,10 +12,10 @@
         <tr>
 
             <th>@Html.DisplayNameFor(model => model.Username)</th>
-            <th>@Html.DisplayNameFor(model => model.Email)</th>
+            @*<th>@Html.DisplayNameFor(model => model.Email)</th>
             <th>@Html.DisplayNameFor(model => model.Name)</th>
             <th>@Html.DisplayNameFor(model => model.LastName)</th>
-            <th>@Html.DisplayNameFor(model => model.Role)</th>
+            <th>@Html.DisplayNameFor(model => model.Role)</th>*@
             <th>@Html.DisplayNameFor(model => model.CreatedDate)</th>
             <th></th>
         </tr>
@@ -23,10 +23,10 @@
         {
             <tr>
                 <td>@Html.DisplayFor(modelItem => item.Username)</td>
-                <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                @*<td>@Html.DisplayFor(modelItem => item.Email)</td>
                 <td>@Html.DisplayFor(modelItem => item.Name)</td>
                 <td>@Html.DisplayFor(modelItem => item.LastName)</td>
-                <td>@Html.DisplayFor(modelItem => item.Role)</td>      
+                <td>@Html.DisplayFor(modelItem => item.Role)</td>*@      
                 <td>@Html.DisplayFor(modelItem => item.CreatedDate)</td>
                
 
