--- a/PineappleSupermarket/Views/Home/Index.cshtml
+++ b/PineappleSupermarket/Views/Home/Index.cshtml
@@ -7,20 +7,25 @@
 <div>
 
     <h2>
-        @ViewBag.Saludo<br />
-        DevIT<br />
+        <br /><br /><br />
+        @ViewBag.Saludo<br /><br /><br />
+
+        DevIT<br /><br /><br />
         Integrantes:<br />
     </h2>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-        <h2>
-            <a href="https://github.com/StefiVioli/PineappleSupermarket">URL de Github</a>  <br />
-        </h2>
+    <ul class="int">
+        <br />
+        <br />
+        <li>Sofía Del Valle</li>
+        <br />
+        <li>Stefania Violi</li>
+    </ul>
+    <br /><br />
+    <h2>
+        <a href="https://github.com/StefiVioli/PineappleSupermarket">URL de Github</a>  <br />
+    </h2>
     @*@Html.ActionLink("Products", "Index", "Product")
-    @Html.ActionLink("Users", "Index", "User")*@
+        @Html.ActionLink("Users", "Index", "User")*@
     @*@Html.Action("_PhotoGallery", "Product", new { number = 3 })*@
 
 </div>
