--- a/PineappleSupermarket/Views/Product/Index.cshtml
+++ b/PineappleSupermarket/Views/Product/Index.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 <body class="display">
-    <p>@Html.ActionLink("Nuevo", "Create", "Product")</p>
+    <p>@Html.ActionLink("New", "Create", "Product")</p>
     @*<p>@Html.Action("_PhotoGallery", "Product")</p>*@
 
      @*<img width="800" src="@Url.Action("GetImage", "Product")" />*@
@@ -39,15 +39,15 @@
                 <td>@Html.DisplayFor(modelItem => item.UnitPrice)</td>
                 <td><img width="50" src="@Url.Action("GetImage", "Product", new { id = item.ProductId })" /></td>
                 <td>
-                    @Html.ActionLink("Detalle", "Detail", new { id = item.ProductId })
+                    @Html.ActionLink("Detail", "Detail", new { id = item.ProductId })
                 </td>
 
                 <td>
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.ProductId })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ProductId })
                 </td>
 
                 <td>
-                    @Html.ActionLink("Editar", "Edit", new { id = item.ProductId })
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ProductId })
                 </td>
 
             </tr>
