--- a/PineappleSupermarket/Views/User/Delete.cshtml
+++ b/PineappleSupermarket/Views/User/Delete.cshtml
@@ -29,6 +29,6 @@
         </p>
     }
     <p>
-        @Html.ActionLink("Index", "Index", "User")
+        @Html.ActionLink("Back to list", "Index", "User")
     </p>
 </body>
