--- a/PineappleSupermarket/Views/User/Index.cshtml
+++ b/PineappleSupermarket/Views/User/Index.cshtml
@@ -6,7 +6,7 @@
 
 
 <body class="display">
-    <p>@Html.ActionLink("Nuevo", "Create", "User")</p>
+    <p>@Html.ActionLink("New", "Create", "User")</p>
  
     <table>
         <tr>
@@ -31,11 +31,11 @@
                
 
                 <td>
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                 </td>
 
                 <td>
-                    @Html.ActionLink("Editar", "Edit", new { id = item.Id })
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })
                 </td>
 
             </tr>
