--- a/PineappleSupermarket/Views/User/Edit.cshtml
+++ b/PineappleSupermarket/Views/User/Edit.cshtml
@@ -52,5 +52,5 @@
             <input type="submit" value="Save" />
         </p>
     }
-    @Html.ActionLink("Index", "Index", "Product")
+    @Html.ActionLink("Back to list", "Index", "User")
 </body>
